--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,4 +1,9 @@
 .header  {
+  display: flex;
+  padding: 10px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
   font-family: monospace;
   background: papayawhip;
 }
@@ -12,6 +17,10 @@
 }
 
 ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 10px;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
