--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,6 +9,9 @@ body {
 }
 
 .header {
+  justify-content: space-between;
+  display: flex;
+  padding: 8px;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
@@ -44,5 +47,16 @@ a {
 }
 
 ul {
+  margin:0;
+  padding: 0;
+  gap: 16px;
+  display: flex;
   list-style-type: none;
+}
+
+.right, .left {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  justify-self: flex-end;
 }
