--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -5,6 +5,10 @@ body, html {
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 4fr 1fr;
+  gap: 1em;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
@@ -21,10 +25,12 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1 / span 2;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2 / span 2;
 }
 
 .nav {
@@ -44,4 +50,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
